--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#A2B5C3</color>
+    <color name="midle_grey">#F5F5F5</color>
+    <color name="light_grey">#FAFAFA</color>
+
+    <color name="black">#000000</color>
+    <color name="midle_black">#191919</color>
+    <color name="light_black">#424242</color>
+
+    <color name="blue">#0D47A1</color>
+    <color name="midle_blue">#1565C0</color>
+    <color name="light_blue">#1E88E5</color>
+
 </resources>
