--- a/app/src/main/res/drawable/custom_toolbar_shape.xml
+++ b/app/src/main/res/drawable/custom_toolbar_shape.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
- >
+
     <gradient
         android:angle="90"
         android:endColor="@color/black"
-        android:centerColor="@color/midle_black"
-        android:startColor="@color/light_black" />
+        android:centerColor="@color/black"
+        android:startColor="@color/midle_light_black" />
 
 </shape>
