--- a/app/src/main/res/layout/app_bar_general_calculator.xml
+++ b/app/src/main/res/layout/app_bar_general_calculator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GeneralCalculatorActivity"
+    tools:context=".ui.GeneralCalculatorActivity"
     android:background="@color/light_black">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -24,13 +24,6 @@
 
     <include layout="@layout/content_general_calculator" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
