--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -5,6 +5,7 @@
     <dimen name="margin_display">15dp</dimen>
     <dimen name="display_result_size">125dp</dimen>
 
+    <dimen name="paddin_display">10dp</dimen>
     <dimen name="paddin_display_mod">5dp</dimen>
     <dimen name="margin_display_result">10dp</dimen>
 
@@ -15,6 +16,8 @@
     
     <dimen name="default_dimen">0dp</dimen>
 
+    <dimen name="button_font_size">30sp</dimen>
+    <dimen name="button_equal_size">50sp</dimen>
 
 
 
