resolvido o problema de divisão, validação de divisão por 0, remapeamento do simbolo de divisão "/" para "÷"

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -18,6 +18,7 @@
 
     <dimen name="button_font_size">30sp</dimen>
     <dimen name="button_equal_size">50sp</dimen>
+    <dimen name="button_percent_size">40sp</dimen>
 
 
 
