--- a/app/src/main/res/layout/fragment_simple_calculator.xml
+++ b/app/src/main/res/layout/fragment_simple_calculator.xml
@@ -78,7 +78,7 @@
         android:background="@drawable/custom_button_operator"
         android:text="@string/button_percentage"
         android:textColor="@color/text_button_number"
-        android:textSize="@dimen/button_equal_size"
+        android:textSize="@dimen/button_percent_size"
         app:layout_constraintBottom_toTopOf="@id/btn_height"
         app:layout_constraintEnd_toStartOf="@id/btn_divide"
         app:layout_constraintStart_toEndOf="@id/btn_ac"
@@ -92,9 +92,10 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/custom_button_operator"
+        android:gravity="center"
         android:text="@string/button_divide"
-        android:textColor="@color/text_button_number"
         android:textSize="@dimen/button_equal_size"
+        android:textColor="@color/text_button_number"
         app:layout_constraintBottom_toTopOf="@id/btn_nine"
         app:layout_constraintEnd_toStartOf="@id/btn_multiply"
         app:layout_constraintStart_toEndOf="@id/btn_percentage"
