--- a/app/src/main/res/layout/activity_general_calculator.xml
+++ b/app/src/main/res/layout/activity_general_calculator.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    android:backgroundTint="@color/light_black">
 
     <include
         android:id="@+id/app_bar_general_calculator"
@@ -21,5 +22,5 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_general_calculator"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer"/>
 </androidx.drawerlayout.widget.DrawerLayout>
