--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -13,7 +13,9 @@
     <dimen name="radius_shape_display">15dp</dimen>
 
     <dimen name="text_result_size">60sp</dimen>
-    
+    <dimen name="text_expression_size">30sp</dimen>
+    <dimen name="text_historic_size">20sp</dimen>
+
     <dimen name="default_dimen">0dp</dimen>
 
     <dimen name="button_font_size">30sp</dimen>
