--- a/app/src/main/res/drawable/custom_shape_display.xml
+++ b/app/src/main/res/drawable/custom_shape_display.xml
@@ -1,9 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="@dimen/radius_shape_display"/>
-    <solid android:color="@color/grey"/>
-    <stroke android:color="@color/light_blue" android:width="@dimen/stroke_shape"/>
+    <!-- Forma do retângulo principal -->
+    <item>
+        <shape android:shape="rectangle">
+            <corners android:bottomLeftRadius="30dp" android:bottomRightRadius="30dp"/>
+            <solid android:color="@color/trans_black97"/>
+            <stroke android:width="1dp" android:color="@color/black"/>
+        </shape>
+    </item>
 
-</shape>
+    <!-- Forma do sublinhado -->
+    <item android:top="-6dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/trans_black97"/>
+            <stroke android:width="1dp" android:color="@color/black"/>
+        </shape>
+    </item>
+
+</layer-list>
