--- a/app/src/main/res/drawable/shape_button_ac_pressed.xml
+++ b/app/src/main/res/drawable/shape_button_ac_pressed.xml
@@ -2,6 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:color="@color/midle_black" android:width="@dimen/stroke_shape"/>
+    <solid android:color="@color/dark_red"/>
+    <corners android:radius="10dp"/>
+    <stroke android:color="@color/red" android:width="1dp"/>
+
 
 </shape>
