--- a/app/src/main/res/drawable/shape_button_equal.xml
+++ b/app/src/main/res/drawable/shape_button_equal.xml
@@ -2,8 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="20dp"/>
-    <solid android:color="@color/light_blue"/>
-    <stroke android:color="@color/blue" android:width="1dp"/>
+    <solid android:color="@color/purple"/>
+    <corners android:radius="10dp"/>
+    <stroke android:color="@color/black" android:width="1dp"/>
+
 
 </shape>
