--- a/app/src/main/res/layout/row_historic.xml
+++ b/app/src/main/res/layout/row_historic.xml
@@ -1,49 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="end"
-    android:background="@color/grey">
+    android:gravity="right"
+    android:background="@color/black">
 
     <TextView
         android:id="@+id/tv_historic_expression"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingEnd="2dp"
-        android:textSize="@dimen/text_historic_size"
-        android:gravity="end"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/tv_historic_equal"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="5+5" />
+        android:fontFamily="sans-serif-black"
+        android:textColor="@color/light_black"
+        tools:text="5+5"
+        android:paddingRight="2dp"/>
 
     <TextView
         android:id="@+id/tv_historic_equal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/text_historic_size"
-        android:gravity="end"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/tv_historic_result"
-        app:layout_constraintStart_toEndOf="@id/tv_historic_expression"
-        tools:text="=" />
+        tools:text="="
+        android:textColor="@color/light_black"
+        android:fontFamily="sans-serif-black"
+        android:paddingRight="2dp"/>
 
     <TextView
         android:id="@+id/tv_historic_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="2dp"
-        android:textSize="@dimen/text_historic_size"
-        android:gravity="end"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_historic_equal"
-        tools:text="10" />
+        android:fontFamily="sans-serif-black"
+        tools:text="10"
+        android:textColor="@color/light_black"
+        android:paddingRight="5dp"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
